correct the documentation url in openAPI docs

--- a/openapi/dfs-common.yaml
+++ b/openapi/dfs-common.yaml
@@ -6,7 +6,7 @@ info:
 
 externalDocs:
   description: Browse the documentation @ the FairOS-dfs Docs
-  url: 'https://docs.fairos.io'
+  url: 'https://fairos.io'
 
 paths: {}
 components:
