--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Build
       run: make build
     - name: Test with Race Detector
-      if: matrix.os != 'windows-latest'
+      if: matrix.os == 'ubuntu-latest'
       run: make test-race
     - name: Test
       if: matrix.os != 'windows-latest'
