--- a/openapi/dfs.yaml
+++ b/openapi/dfs.yaml
@@ -1519,6 +1519,8 @@ paths:
                   $ref: '#/components/schemas/PodName'
                 table_ame:
                   $ref: '#/components/schemas/KVTableName'
+                memory:
+                    $ref: '#/components/schemas/KVMemoryTable'
               required:
                 - pod_name
                 - table_ame
@@ -2358,6 +2360,10 @@ components:
     KVTableName:
       type: string
       example: "kv_table1"
+
+    KVMemoryTable:
+      type: string
+      example: "true"
 
     KVKey:
       type: string
