--- a/openapi/dfs.yaml
+++ b/openapi/dfs.yaml
@@ -106,8 +106,8 @@ paths:
       summary: 'Import user'
       description: 'Import a user from one dfs server to another and subsequently logs in returning the authentication cookie `fairOS-dfs`.
       The cookie needs to be sent n the request header in all subsequent requests.
-      Importing is usefull when a user switches machines or lost a old machine which was running his dfs server.
-      Imput contains a form object containing the login, password, ethereum address and optionally mnemonic.
+      Importing is useful when a user switches machines or lost a old machine which was running his dfs server.
+      Input contains a form object containing the login, password, ethereum address and optionally mnemonic.
       If mnemonic is provided a user will be created while importing.'
       tags:
         - User
@@ -586,7 +586,7 @@ paths:
   '/pod/ls':
     get:
       summary: 'List pod'
-      description: 'Lista all pods of a user'
+      description: 'Lists all pods of a user'
       tags:
         - Pod
       parameters:
@@ -887,7 +887,7 @@ paths:
   '/file/download':
     get:
       summary: 'Download file'
-      description: 'Download a file from the pod tp the local dir'
+      description: 'Download a file from the pod to the local dir'
       tags:
         - File System
       parameters:
@@ -1076,7 +1076,7 @@ paths:
   '/file/stat':
     get:
       summary: 'Stat info'
-      description: 'Get the information about a file in the pod '
+      description: 'Get the information about a file in the pod'
       tags:
         - File System
       parameters:
@@ -1501,7 +1501,7 @@ paths:
   '/kv/loadcsv':
     post:
       summary: 'LoadCSV'
-      description: 'load a csv file in to a given KV table'
+      description: 'Load a csv file in to a given KV table'
       tags:
         - Key Value Store
       parameters:
@@ -1547,7 +1547,7 @@ paths:
   '/doc/new':
     post:
       summary: 'Create DocumentDB'
-      description: 'create a document DB with the given fields as indexes'
+      description: 'Create a document DB with the given fields as indexes'
       tags:
         - Document DB
       parameters:
@@ -1589,7 +1589,7 @@ paths:
   '/doc/ls':
     get:
       summary: 'List DocumentDBs'
-      description: 'list all the document dbs of the pod'
+      description: 'List all the document dbs of the pod'
       tags:
         - Document DB
       parameters:
@@ -1624,7 +1624,7 @@ paths:
   '/doc/open':
     post:
       summary: 'Open DocumentDB'
-      description: 'open a already created document DB'
+      description: 'Open a already created document DB'
       tags:
         - Document DB
       parameters:
@@ -1701,7 +1701,7 @@ paths:
   '/doc/delete':
     delete:
       summary: 'Delete DocumentDB'
-      description: 'Delete the given ocument DB and all its documents and indexes'
+      description: 'Delete the given document DB and all its documents and indexes'
       tags:
         - Document DB
       parameters:
@@ -1782,7 +1782,7 @@ paths:
   '/doc/loadjson':
     post:
       summary: 'LoadJson'
-      description: 'load a json file in to a given document DB'
+      description: 'Load a json file in to a given document DB'
       tags:
         - Key Value Store
       parameters:
