--- a/docker/testnet-new/docker-compose.yml
+++ b/docker/testnet-new/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   bee-1:
-    image: ethersphere/bee:1.3.0-rc4
+    image: ethersphere/bee:1.4.0
     restart: on-failure
     environment:
       - BEE_API_ADDR
@@ -13,7 +13,7 @@ services:
       - BEE_CONFIG
       - BEE_CORS_ALLOWED_ORIGINS
       - BEE_DATA_DIR
-      - BEE_CACHE_CAPACITY=30000000
+      - BEE_CACHE_CAPACITY=10000000
       - BEE_DB_OPEN_FILES_LIMIT
       - BEE_DB_BLOCK_CACHE_CAPACITY
       - BEE_DB_WRITE_BUFFER_SIZE
