--- a/.github/workflows/coverge.yml
+++ b/.github/workflows/coverge.yml
@@ -15,15 +15,15 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.14
+          go-version: 1.17
       - name: Checkout
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Report results to DeepSource
+        env:
+          DEEPSOURCE_DSN: '${{ secrets.DEEPSOURCE_DSN }}'
         run: |
           go test -coverprofile=cover.out ./...
           curl https://deepsource.io/cli | sh
           ./bin/deepsource report --analyzer test-coverage --key go --value-file ./cover.out
-        env:
-          DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
