--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: 'development'
+          fetch-depth: 1
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
