--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -38,7 +38,7 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
-      - linux
+      - darwin
     goarch:
       - amd64
       - arm64
@@ -65,9 +65,7 @@ archives:
       darwin: Darwin
       linux: Linux
       windows: Windows
-      386: i386
-      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  name_template: "{{ incpatch .Version }}-snapshot"
