--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -61,10 +61,10 @@ builds:
       - 386
 
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
+  - files:
+      - README.md
+      - LICENSE
+    name_template: `{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}`
 checksum:
   name_template: 'checksums.txt'
 snapshot:
