--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
@@ -34,7 +34,7 @@ builds:
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
@@ -51,7 +51,7 @@ builds:
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
@@ -62,14 +62,14 @@ builds:
 
   - id: dfs-cli-linux
     main: ./cmd/dfs-cli
-    binary: dfs-cli
+    binary: dfs_cli
     flags:
       - -v
       - -trimpath
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
@@ -83,14 +83,14 @@ builds:
       - 7
   - id: dfs-cli-darwin
     main: ./cmd/dfs-cli
-    binary: dfs-cli
+    binary: dfs_cli
     flags:
       - -v
       - -trimpath
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
@@ -100,14 +100,14 @@ builds:
       - arm64
   - id: dfs-cli-windows
     main: ./cmd/dfs-cli
-    binary: dfs-cli
+    binary: dfs_cli
     flags:
       - -v
       - -trimpath
     ldflags:
       - -s -w
       - -X github.com/fairdatasociety/fairOS-dfs.commit={{ .ShortCommit }}
-      - -X github.com/fairdatasociety/fairOS-dfs.versions={{ .Version }}
+      - -X github.com/fairdatasociety/fairOS-dfs.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     goos:
